--- a/templates/stock_diario_dinamico.html
+++ b/templates/stock_diario_dinamico.html
@@ -346,6 +346,7 @@
             <table class="stock-table">
                 <thead>
                     <tr>
+                        <th rowspan="2">GRUPO</th>
                         <th rowspan="2">CÓDIGO</th>
                         <th rowspan="2">DESCRIPCIÓN</th>
                         <th rowspan="2">UNIDAD</th>
@@ -374,6 +375,7 @@
                         {% for codigo, info in datos.items() %}
                             {% if info.dia %}
                             <tr class="explosivo-row turno-dia">
+                                <td>{{ info.explosivo.grupo }}</td>
                                 <td><strong>{{ codigo }}</strong></td>
                                 <td>{{ info.explosivo.descripcion }}</td>
                                 <td>{{ info.explosivo.unidad }}</td>
@@ -403,7 +405,7 @@
                         {% endfor %}
                     {% else %}
                         <tr>
-                            <td colspan="{{ 10 + max_labores_por_turno.get('dia', 5) }}" class="sin-datos">
+                            <td colspan="{{ 11 + max_labores_por_turno.get('dia', 5) }}" class="sin-datos">
                                 <i class="fas fa-info-circle"></i> 
                                 No hay datos de stock para turno día en la fecha seleccionada
                             </td>
@@ -419,6 +421,7 @@
             <table class="stock-table">
                 <thead>
                     <tr>
+                        <th rowspan="2">GRUPO</th>
                         <th rowspan="2">CÓDIGO</th>
                         <th rowspan="2">DESCRIPCIÓN</th>
                         <th rowspan="2">UNIDAD</th>
@@ -447,6 +450,7 @@
                         {% for codigo, info in datos.items() %}
                             {% if info.noche %}
                             <tr class="explosivo-row turno-noche">
+                                <td>{{ info.explosivo.grupo }}</td>
                                 <td><strong>{{ codigo }}</strong></td>
                                 <td>{{ info.explosivo.descripcion }}</td>
                                 <td>{{ info.explosivo.unidad }}</td>
@@ -476,7 +480,7 @@
                         {% endfor %}
                     {% else %}
                         <tr>
-                            <td colspan="{{ 10 + max_labores_por_turno.get('noche', 5) }}" class="sin-datos">
+                            <td colspan="{{ 11 + max_labores_por_turno.get('noche', 5) }}" class="sin-datos">
                                 <i class="fas fa-info-circle"></i> 
                                 No hay datos de stock para turno noche en la fecha seleccionada
                             </td>
